examples/reference/directive_typo_endmodule_fixit_error.err
Assembly failed:
4: ERROR [asm202]
    4 |         .endmoduel
        ^
help: did you mean .endmodule?
suggestion: replace 4:9-19 with ".ENDMODULE"
ERROR: Unknown directive .ENDMODUEL
